--- a/app/src/main/res/layout/activity_registration_step_one.xml
+++ b/app/src/main/res/layout/activity_registration_step_one.xml
@@ -23,6 +23,25 @@
             app:titleTextAppearance="@style/Toolbar.TitleText">
 
 
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txtCountry"
+                android:visibility="invisible"
+                android:contentDescription="@string/app_name"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_gravity="end"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:textColor="@color/colorWhite"
+                android:focusable="true"
+                android:textSize="@dimen/_12sdp"
+                android:textAllCaps="true"
+                android:drawableEnd="@drawable/ic_dropdown_icon"
+                android:drawablePadding="@dimen/_3sdp"
+                android:textStyle="bold"
+
+                />
+
         </androidx.appcompat.widget.Toolbar>
 
 
