--- a/app/src/main/res/layout/layout_registration_step_five.xml
+++ b/app/src/main/res/layout/layout_registration_step_five.xml
@@ -28,19 +28,23 @@
             app:layout_constraintTop_toTopOf="parent"
             />
 
-    <RelativeLayout
-        android:id="@+id/rlImage"
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/imageCard"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
+        android:contentDescription="@string/app_name"
+        android:background="@drawable/ic_upload_id"
         app:layout_constraintTop_toBottomOf="@+id/txtInfo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/layoutBottom">
+        app:layout_constraintBottom_toTopOf="@+id/layoutBottom"
+        app:layout_constraintDimensionRatio="H,2:1"
+        >
 
 
-        <ImageView
+        <!--<ImageView
             android:id="@+id/imageCard"
             android:contentDescription="@string/app_name"
             android:layout_centerInParent="true"
@@ -49,9 +53,10 @@
             android:background="@drawable/ic_upload_id"
             android:adjustViewBounds="true"
 
-            />
 
-    </RelativeLayout>
+            />-->
+
+    </ImageView>
 
         <LinearLayout
             android:id="@+id/layoutBottom"
