--- a/app/src/main/res/layout/content_email_required.xml
+++ b/app/src/main/res/layout/content_email_required.xml
@@ -76,6 +76,7 @@
         android:fontFamily="@font/montserrat"
         android:background="@drawable/bg_button_app"
         android:text="@string/continue_"
+        android:focusable="true"
         android:textAllCaps="true"
         android:textStyle="bold"
         android:textSize="@dimen/_12sdp"
