--- a/app/src/main/res/layout/content_email_verification.xml
+++ b/app/src/main/res/layout/content_email_verification.xml
@@ -81,7 +81,7 @@
         android:textSize="@dimen/_12sdp"
         android:textColor="@color/colorWhite"
         android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_12sdp"
         android:layout_marginTop="@dimen/_10sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,10 +97,11 @@
         android:fontFamily="@font/montserrat"
         android:text="@string/resend_verification"
         android:textColor="@color/colorTextBlack"
+        android:textColorLink="@color/color_deep_green"
         android:textSize="@dimen/_12sdp"
         android:gravity="center|end"
         android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_12sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
