--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -26,7 +26,7 @@
         <item
             android:id="@+id/action_points"
             android:icon="@drawable/ic_buy_point_icon"
-            android:title="@string/nav_item_points" />
+            android:title="@string/nav_item_airtime_credit" />
         <item
             android:id="@+id/action_investment"
             android:icon="@drawable/ic_menu_investment_icon"
