--- a/app/src/main/res/layout/content_otp.xml
+++ b/app/src/main/res/layout/content_otp.xml
@@ -63,17 +63,17 @@
                 app:layout_constraintBottom_toTopOf="@+id/txtResend"
                 />
 
-            <com.app.l_pesa.common.CommonTextRegular
+            <TextView
                 android:id="@+id/txtResend"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat"
                 android:text="@string/resend_verification"
-                android:textColor="@color/colorTextBlack"
+                android:textColor="@color/colorAppDeep"
+                android:textStyle="bold"
+                android:padding="@dimen/_2sdp"
                 android:textSize="@dimen/_12sdp"
-                android:gravity="center|end"
+                android:gravity="center"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_25sdp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/otp_view"
@@ -86,10 +86,10 @@
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/colorTextBlack"
                 android:textSize="@dimen/_12sdp"
-                android:gravity="center|end"
+                android:gravity="center"
                 android:visibility="invisible"
+                android:padding="@dimen/_2sdp"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_25sdp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/otp_view"
