--- a/app/src/main/res/layout/content_email_verification.xml
+++ b/app/src/main/res/layout/content_email_verification.xml
@@ -90,18 +90,18 @@
 
         />
 
-    <com.app.l_pesa.common.CommonTextRegular
+    <TextView
         android:id="@+id/txtResend"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat"
         android:text="@string/resend_verification"
-        android:textColor="@color/colorTextBlack"
-        android:textColorLink="@color/color_deep_green"
+        android:fontFamily="@font/montserrat"
+        android:textColor="@color/colorAppDeep"
+        android:textStyle="bold"
         android:textSize="@dimen/_12sdp"
-        android:gravity="center|end"
+        android:gravity="center"
+        android:padding="@dimen/_2sdp"
         android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_12sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
