--- a/app/src/main/res/layout/content_loan_apply.xml
+++ b/app/src/main/res/layout/content_loan_apply.xml
@@ -90,7 +90,8 @@
                         android:maxLength="500"
                         android:gravity="top"
                         android:textColorHint="@color/light_text_color"
-                        android:textSize="@dimen/_13sdp"
+                        android:textColor="@color/textColors"
+                        android:textSize="@dimen/_12sdp"
                         app:autoSizeMaxTextSize="@dimen/_14sdp"
                         app:autoSizeMinTextSize="@dimen/_10sdp"
                         app:autoSizeStepGranularity="0.2sp"
