--- a/app/src/main/res/layout/content_close_account.xml
+++ b/app/src/main/res/layout/content_close_account.xml
@@ -10,85 +10,130 @@
 
     >
 
-    <com.app.l_pesa.common.CommonTextRegular
-        android:id="@+id/txtInfo"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/_85sdp"
-        android:text="@string/email_verification"
-        android:textSize="@dimen/_11sdp"
-        android:padding="@dimen/_3sdp"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:fontFamily="@font/montserrat"
-        android:textColor="@color/dark_text_color"
-        android:gravity="center|start"
-        android:justificationMode="inter_word"
-        app:layout_constraintBottom_toTopOf="@+id/tilVerificationCode"
+    <ScrollView
+        android:id="@+id/scroller"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/tilCloseAccount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txtInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/email_verification"
+                android:textSize="@dimen/_11sdp"
+                android:padding="@dimen/_3sdp"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/dark_text_color"
+                android:gravity="center|start"
+                android:justificationMode="inter_word"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/tilVerificationCode"
+
+
+    </ScrollView>
+
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/tilCloseAccount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtInfo"
-        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
+
         >
-
-        <com.app.l_pesa.common.CommonInputLayout
-
-            style="@style/customInputLayoutStyle"
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
 
             >
 
-            <com.app.l_pesa.common.CommonEditTextRegular
-                android:id="@+id/etReason"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_65sdp"
-                android:hint="@string/reason_for_account_close"
-                android:gravity="center|top|start"
-                android:padding="@dimen/_5sdp"
-                android:inputType="textNoSuggestions|text|textMultiLine"
-                android:textColorHint="@color/color_gray_text"
-                android:textColor="@color/textColors"
-                android:textSize="@dimen/_12sdp" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                >
 
-        </com.app.l_pesa.common.CommonInputLayout>
+                <com.app.l_pesa.common.CommonInputLayout
+                    android:id="@+id/commonInputLayout"
+                    style="@style/customInputLayoutStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
 
-    </androidx.core.widget.NestedScrollView>
+                    <com.app.l_pesa.common.CommonEditTextRegular
+                        android:id="@+id/etReason"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_65sdp"
+                        android:hint="@string/reason_for_account_close"
+                        android:gravity="center|top|start"
+                        android:padding="@dimen/_5sdp"
+                        android:inputType="textNoSuggestions|text|textMultiLine"
+                        android:textColorHint="@color/light_text_color"
+                        android:textColor="@color/textColors"
+                        app:autoSizeStepGranularity="0.2sp"
+                        app:autoSizeTextType="uniform"
+                        android:textSize="@dimen/_12sdp"
+
+                        />
+
+                </com.app.l_pesa.common.CommonInputLayout>
 
 
-    <com.app.l_pesa.common.CustomButtonRegular
-        android:id="@+id/btnSubmit"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/_40sdp"
-        android:fontFamily="@font/montserrat"
-        android:background="@drawable/bg_button_app"
-        android:text="@string/title_close_account"
-        android:textAllCaps="true"
-        android:textStyle="bold"
-        android:textSize="@dimen/_12sdp"
-        android:textColor="@color/colorWhite"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_12sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tilVerificationCode"
+                <com.app.l_pesa.common.CustomButtonRegular
+                    android:id="@+id/btnSubmit"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_40sdp"
+                    android:fontFamily="@font/montserrat"
+                    android:background="@drawable/bg_button_app"
+                    android:text="@string/title_close_account"
+                    android:textAllCaps="true"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/_12sdp"
+                    android:textColor="@color/colorWhite"
+                    android:layout_marginTop="@dimen/_10sdp"
 
 
-        />
+                    />
+
+            </LinearLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
