--- a/app/src/main/res/drawable/ic_email.xml
+++ b/app/src/main/res/drawable/ic_email.xml
@@ -1,9 +1,5 @@
-<vector android:alpha="0.75" android:height="24dp"
-    android:viewportHeight="383.47" android:viewportWidth="383.47"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#C3C6C8" android:pathData="M299.651,107.554c0,-11.791 -9.646,-21.438 -21.437,-21.438H21.438C9.648,86.117 0,95.763 0,107.554v160.499c0,11.791 9.648,21.438 21.438,21.438h256.776c11.791,0 21.437,-9.646 21.437,-21.438V107.554z"/>
-    <path android:fillColor="#E8E8E8" android:pathData="M149.825,166.12L0,261.964v6.089c0,11.791 9.648,21.438 21.438,21.438h256.776c11.791,0 21.437,-9.646 21.437,-21.438v-6.089L149.825,166.12z"/>
-    <path android:fillColor="#E8E8E8" android:pathData="M149.825,209.49l149.826,-95.849v-6.087c0,-11.791 -9.646,-21.438 -21.437,-21.438H21.438C9.648,86.117 0,95.763 0,107.554v6.087L149.825,209.49z"/>
-    <path android:fillColor="#005CB9" android:pathData="M298.5,100.659l-148.675,95.108L1.151,100.659C0.409,102.827 0,105.145 0,107.554v6.087l149.825,95.849l149.826,-95.849v-6.087C299.651,105.145 299.242,102.827 298.5,100.659z"/>
-    <path android:fillColor="#005CB9" android:pathData="M378.879,216.676l-54.903,-54.903c-6.121,-6.12 -11.129,-4.046 -11.129,4.61v24.174h-81.276c-8.656,0 -15.739,7.082 -15.739,15.738v43.02c0,8.656 7.083,15.739 15.739,15.739h81.276v24.173c0,8.657 5.008,10.73 11.129,4.61l54.903,-54.903C385,232.814 385,222.796 378.879,216.676z"/>
+<vector android:height="24dp" android:viewportHeight="48"
+    android:viewportWidth="48" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#F15A5B" android:pathData="M24,24.1m-24,0a24,24 0,1 1,48 0a24,24 0,1 1,-48 0"/>
+    <path android:fillColor="#FFFFFF" android:fillType="evenOdd" android:pathData="M27.2,24.9l9,7.7c-0.3,0.3 -0.8,0.5 -1.3,0.5h-21.8c-0.5,0 -0.9,-0.2 -1.3,-0.5l9,-7.7l3.2,2.8L27.2,24.9zM24,25.8l-12.2,-10.4c0.3,-0.3 0.8,-0.5 1.3,-0.5h21.8c0.5,0 0.9,0.2 1.3,0.5L24,25.8zM36.8,31.6l-8.8,-7.5l8.8,-7.7L36.8,31.6L36.8,31.6zM11.3,31.6L11.3,16.5l8.8,7.7L11.3,31.6L11.3,31.6z"/>
 </vector>
