--- a/app/src/main/res/layout/content_help.xml
+++ b/app/src/main/res/layout/content_help.xml
@@ -13,136 +13,101 @@
     <LinearLayout
         android:id="@+id/llHeader"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="vertical"
         android:background="@color/colorWhite"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         >
 
-    <FrameLayout
-        android:id="@+id/frameHead"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:ignore="UselessParent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/txtCountry"
-        android:layout_marginTop="@dimen/_20sdp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/_15sdp"
 
-       >
+            >
 
-        <ImageView
-            android:id="@+id/imgShade"
-            android:layout_width="@dimen/_65sdp"
-            android:layout_height="@dimen/_65sdp"
-            android:contentDescription="@string/app_name"
-            android:layout_gravity="center"
-            android:background="@drawable/ic_hexagonal_bg"
-            android:padding="@dimen/_20sdp"
+            <FrameLayout
+                android:id="@+id/frameImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/txtCountry"
+                app:layout_constraintTop_toTopOf="parent"
 
-            />
-
-        <ImageView
-            android:id="@+id/imgCountry"
-            android:layout_width="@dimen/_22sdp"
-            android:layout_height="@dimen/_20sdp"
-            android:contentDescription="@string/app_name"
-            android:layout_gravity="center"
-
-            />
+                >
 
 
-    </FrameLayout>
+               <com.app.l_pesa.common.CircularImageView
+                android:contentDescription="@string/app_name"
+                android:layout_width="@dimen/_55sdp"
+                android:layout_height="@dimen/_55sdp"
+                android:padding="@dimen/_12sdp"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_flag_round"
+                app:civ_border_width="@dimen/_1sdp"
+                app:civ_background_color="@color/screenBackground"
+                app:civ_border_color="@color/colorAppDeep"
+                app:civ_shadow="false"
 
-   <TextView
-        android:id="@+id/txtCountry"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_2sdp"
-        android:textSize="@dimen/_16sdp"
-        android:fontFamily="@font/montserrat"
-        android:textColor="@color/colorTextBlack"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameHead"
-        app:layout_constraintBottom_toTopOf="@+id/viewDivider"
-       />
+                />
 
-    <View
-        android:id="@+id/viewDivider"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_1sdp"
-        android:layout_marginTop="@dimen/_3sdp"
-        android:background="@color/divider_color"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtCountry"
-        app:layout_constraintBottom_toTopOf="@+id/viewDividerTwo"
-
-        />
+                <ImageView
+                    android:id="@+id/imgCountry"
+                    android:contentDescription="@string/app_name"
+                    android:layout_width="@dimen/_35sdp"
+                    android:layout_height="@dimen/_28sdp"
+                    android:padding="@dimen/_5sdp"
+                    android:layout_gravity="center"
+                    android:scaleType="fitXY"
 
 
-    <View
-        android:id="@+id/viewDividerTwo"
-        android:layout_width="@dimen/_1sdp"
-        android:layout_height="@dimen/_35sdp"
-        android:layout_marginTop="@dimen/_3sdp"
-        android:layout_marginBottom="@dimen/_3sdp"
-        android:visibility="invisible"
-        android:background="@color/divider_color"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewDivider"
+                    />
 
-        />
+            </FrameLayout>
 
-    <TextView
-        android:id="@+id/txtPhone"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/_40sdp"
-        android:layout_marginTop="@dimen/_2sdp"
-        android:textSize="@dimen/_11sdp"
-        android:fontFamily="@font/montserrat"
-        android:textColor="@color/textColors"
-        android:gravity="center|start"
-        android:paddingStart="@dimen/_10sdp"
-        android:paddingEnd="@dimen/_1sdp"
-        android:drawablePadding="@dimen/_5sdp"
-        android:drawableStart="@drawable/ic_call"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewDivider"
-        app:layout_constraintEnd_toStartOf="@+id/viewDividerTwo"
-        app:layout_constraintBottom_toBottomOf="@+id/viewDividerTwo"
-        />
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txtCountry"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:textSize="@dimen/_15sdp"
+                android:textColor="@color/dark_text_color"
+                android:gravity="center|start"
+                android:paddingStart="@dimen/_5sdp"
+                android:paddingEnd="@dimen/_1sdp"
+                android:textAllCaps="true"
+                app:layout_constraintStart_toEndOf="@+id/frameImage"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
 
-    <TextView
-        android:id="@+id/txtEmail"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/_40sdp"
-        android:layout_marginTop="@dimen/_2sdp"
-        android:textSize="@dimen/_11sdp"
-        android:fontFamily="@font/montserrat"
-        android:textColor="@color/textColors"
-        android:gravity="center|start"
-        android:paddingStart="@dimen/_10sdp"
-        android:paddingEnd="@dimen/_1sdp"
-        android:drawablePadding="@dimen/_5sdp"
-        android:drawableStart="@drawable/ic_email"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewDivider"
-        app:layout_constraintStart_toEndOf="@+id/viewDividerTwo"
-        app:layout_constraintBottom_toBottomOf="@+id/viewDividerTwo"
-        />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                />
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txtPhone"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:textSize="@dimen/_12sdp"
+                android:textColor="@color/dark_text_color"
+                android:gravity="center|start"
+                android:paddingStart="@dimen/_5sdp"
+                android:paddingEnd="@dimen/_1sdp"
+                android:drawablePadding="@dimen/_5sdp"
+                android:drawableStart="@drawable/ic_call"
+                app:layout_constraintStart_toEndOf="@+id/frameImage"
+                app:layout_constraintTop_toBottomOf="@+id/txtCountry"
+                app:layout_constraintEnd_toEndOf="parent"
+
+                />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </LinearLayout>
@@ -156,6 +121,42 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/llHeader"
         >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_white_view"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginStart="@dimen/_12sdp"
+            android:layout_marginEnd="@dimen/_12sdp"
+
+
+            >
+
+
+            <TextView
+                android:id="@+id/txtEmail"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/_42sdp"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:textSize="@dimen/_12sdp"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/dark_text_color"
+                android:gravity="center|start"
+                android:paddingStart="@dimen/_10sdp"
+                android:paddingEnd="@dimen/_1sdp"
+                android:drawablePadding="@dimen/_5sdp"
+                android:drawableStart="@drawable/ic_email"
+                android:drawableEnd="@drawable/ic_right_arrow"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+
+
+                />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -223,18 +224,12 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
 
-
                 />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
-
-
-
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
