--- a/app/src/main/res/layout/fragment_business_id_layout.xml
+++ b/app/src/main/res/layout/fragment_business_id_layout.xml
@@ -111,6 +111,7 @@
                         android:inputType="text|textNoSuggestions"
                         android:maxLength="15"
                         android:maxLines="1"
+                        android:digits="0123456789qwertzuiopasdfghjklyxcvbnm "
                         android:textSize="@dimen/_12sdp"
 
                         />
