--- a/app/src/main/res/layout/fragment_personal_id_layout.xml
+++ b/app/src/main/res/layout/fragment_personal_id_layout.xml
@@ -110,6 +110,7 @@
                         android:inputType="text|textNoSuggestions"
                         android:maxLength="15"
                         android:maxLines="1"
+                        android:digits="0123456789qwertzuiopasdfghjklyxcvbnm "
                         android:textSize="@dimen/_12sdp" />
                 </com.app.l_pesa.common.CommonInputLayout>
 
