--- a/app/src/main/res/layout/content_profile_edit_emp_info.xml
+++ b/app/src/main/res/layout/content_profile_edit_emp_info.xml
@@ -9,8 +9,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:ignore="MissingConstraints">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout
         android:id="@+id/llRoot"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
