--- a/app/src/main/res/layout/content_profile_edit_emp_info.xml
+++ b/app/src/main/res/layout/content_profile_edit_emp_info.xml
@@ -59,6 +59,7 @@
                         android:inputType="text"
                         android:maxLength="20"
                         android:maxLines="1"
+                        android:digits="0123456789qwertzuiopasdfghjklyxcvbnm "
                         android:textColor="@color/textColors"
                         android:textSize="@dimen/_12sdp" />
 
@@ -82,6 +83,7 @@
                         android:inputType="text"
                         android:maxLength="25"
                         android:maxLines="1"
+                        android:digits="0123456789qwertzuiopasdfghjklyxcvbnm "
                         android:textColor="@color/textColors"
                         android:textSize="@dimen/_12sdp" />
 
@@ -105,6 +107,7 @@
                         android:inputType="text"
                         android:maxLength="20"
                         android:maxLines="1"
+                        android:digits="0123456789qwertzuiopasdfghjklyxcvbnm "
                         android:textColor="@color/textColors"
                         android:textSize="@dimen/_12sdp" />
 
@@ -128,6 +131,7 @@
                         android:inputType="text"
                         android:maxLength="20"
                         android:maxLines="1"
+                        android:digits="0123456789qwertzuiopasdfghjklyxcvbnm "
                         android:textColor="@color/textColors"
                         android:textSize="@dimen/_12sdp" />
 
@@ -151,6 +155,7 @@
                         android:inputType="text"
                         android:maxLength="15"
                         android:maxLines="1"
+                        android:digits="0123456789qwertzuiopasdfghjklyxcvbnm "
                         android:textColor="@color/textColors"
                         android:textSize="@dimen/_12sdp" />
 
@@ -174,6 +179,7 @@
                         android:inputType="text"
                         android:maxLength="20"
                         android:maxLines="1"
+                        android:digits="0123456789qwertzuiopasdfghjklyxcvbnm "
                         android:textColor="@color/textColors"
                         android:textSize="@dimen/_12sdp" />
 
