--- a/app/src/main/res/layout/content_change_login_pin.xml
+++ b/app/src/main/res/layout/content_change_login_pin.xml
@@ -39,6 +39,7 @@
                         android:inputType="numberSigned"
                         android:maxLength="6"
                         android:maxLines="1"
+                        android:digits="0123456789"
                         android:textSize="@dimen/_13sdp"
                         app:autoSizeMaxTextSize="@dimen/_14sdp"
                         app:autoSizeMinTextSize="@dimen/_10sdp"
@@ -68,6 +69,7 @@
                         android:inputType="numberSigned"
                         android:maxLength="6"
                         android:maxLines="1"
+                        android:digits="0123456789"
                         android:textSize="@dimen/_13sdp"
                         app:autoSizeMaxTextSize="@dimen/_14sdp"
                         app:autoSizeMinTextSize="@dimen/_10sdp"
@@ -97,6 +99,7 @@
                         android:inputType="numberSigned"
                         android:maxLength="6"
                         android:maxLines="1"
+                        android:digits="0123456789"
                         android:textSize="@dimen/_13sdp"
                         app:autoSizeMaxTextSize="@dimen/_14sdp"
                         app:autoSizeMinTextSize="@dimen/_10sdp"
