--- a/app/src/main/res/layout/content_change_pin.xml
+++ b/app/src/main/res/layout/content_change_pin.xml
@@ -41,6 +41,7 @@
                     android:inputType="numberSigned"
                     android:maxLength="6"
                     android:maxLines="1"
+                    android:digits="0123456789"
                     android:textSize="@dimen/_13sdp"
                     app:autoSizeMaxTextSize="@dimen/_14sdp"
                     app:autoSizeMinTextSize="@dimen/_10sdp"
@@ -72,6 +73,7 @@
                     android:inputType="numberSigned"
                     android:maxLength="6"
                     android:maxLines="1"
+                    android:digits="0123456789"
                     android:textSize="@dimen/_13sdp"
                     app:autoSizeMaxTextSize="@dimen/_14sdp"
                     app:autoSizeMinTextSize="@dimen/_10sdp"
@@ -104,6 +106,7 @@
                     android:inputType="numberSigned"
                     android:maxLength="6"
                     android:maxLines="1"
+                    android:digits="0123456789"
                     android:textSize="@dimen/_13sdp"
                     app:autoSizeMaxTextSize="@dimen/_14sdp"
                     app:autoSizeMinTextSize="@dimen/_10sdp"
