--- a/app/src/main/res/layout/content_profile_edit_business_info.xml
+++ b/app/src/main/res/layout/content_profile_edit_business_info.xml
@@ -59,6 +59,7 @@
                     android:inputType="text"
                     android:maxLength="20"
                     android:maxLines="1"
+                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 "
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp" />
 
@@ -82,6 +83,7 @@
                     android:inputType="text"
                     android:maxLength="20"
                     android:maxLines="1"
+                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 "
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp" />
 
@@ -127,6 +129,7 @@
                     android:inputType="text"
                     android:maxLength="20"
                     android:maxLines="1"
+                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 "
                     android:textColor="@color/textColors"
                     android:textSize="@dimen/_12sdp" />
 
