--- a/app/src/main/res/layout/fragment_token_transfer.xml
+++ b/app/src/main/res/layout/fragment_token_transfer.xml
@@ -82,7 +82,8 @@
                         android:id="@+id/etToken"
                         android:inputType="numberSigned"
                         android:maxLength="10"
-                        android:textSize="@dimen/_13sdp"
+                        android:digits="0123456789"
+                        android:textSize="@dimen/_12sdp"
                         android:longClickable="false"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
